se elimina el uso de clase de estilos

--- a/page1.html
+++ b/page1.html
@@ -4,8 +4,8 @@
         <title>Mi primera pagina Web con GIT</title>
     </head>
     <body>
-        <h1 class=h1.colorTexto>Producto 1</h1>
-        <span class="span.colorFondo">Aquí hay un span con algo de texto.</span>
+        <h1 style="color: blue;">Producto 1</h1>
+        <span style="background-color: blanchedalmond">Aquí hay un span con algo de texto.</span>
         <span>Aquí hay otro.</span>
     </body>
 </html>
